refactor: linting and test suite
refactor: extract command handling logic from main() to reduce complexity
feat: Add comprehensive test suite for tailsocks project
feat: add test coverage script with pytest-cov reporting
linting
more linting

--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ typing-extensions>=4.0.0; python_version < "3.8"
 # Test dependencies
 pytest==7.4.3
 pytest-cov==4.1.0
+pytest-mock==3.12.0
 attrs==23.1.0
 
 # Development dependencies
